💄 style: fix overflow on search

--- a/src/app/user/search/search.component.css
+++ b/src/app/user/search/search.component.css
@@ -13,6 +13,7 @@
     text-align: center;
     gap: 2rem;
     justify-content: center;
+    overflow-y: auto;
 }
 
 .page__container .form__container p{
